Fix summary module roster scrolling alignment  bug
[#148663621]

https://www.pivotaltracker.com/story/show/148663621

--- a/src/css/module_summary.styl
+++ b/src/css/module_summary.styl
@@ -5,19 +5,17 @@ selectable_row(hue=20)
     background-color hsl(hue,0,93)
 
 
-
 .module-summary
   padding: 4px;
+  background-color aliceblue
   .flex-cell
-    width: 130px
+    width: 170px
     display: flex
     flex-direction: row
     justify-content: space-between
 
 
   .heading-container
-    background-color aliceblue
-    height 100vh
     width 25vw
     position absolute
     padding-top 2em
@@ -30,9 +28,7 @@ selectable_row(hue=20)
     margin-left 25vw
     padding-top 2em
     left 2px
-    background-color aliceblue
     overflow auto
-    height: 100vh
 
   table
     color hsl(0,0,25)
